@@ -40,9 +40,6 @@ import org.apache.olingo.jpa.processor.core.mapping.converter.LocalDateTime2Zone
 import org.apache.olingo.jpa.processor.core.mapping.converter.LocalTime2UtilCalendarODataAttributeConverter;
 import org.apache.olingo.jpa.processor.core.mapping.converter.SqlDate2UtilCalendarODataAttributeConverter;
 import org.apache.olingo.jpa.processor.core.mapping.converter.SqlTime2UtilCalendarODataAttributeConverter;
-import org.apache.olingo.jpa.processor.core.mapping.converter.TimeInstant2TimestampODataAttributeConverter;
-import org.apache.olingo.jpa.processor.core.mapping.converter.TimeInstant2UtilCalenderODataAttributeConverter;
-import org.apache.olingo.jpa.processor.core.mapping.converter.TimeInstant2UtilDateODataAttributeConverter;
 import org.apache.olingo.jpa.processor.core.mapping.converter.UtilDate2UtilCalendarODataAttributeConverter;
 import org.apache.olingo.server.api.ODataApplicationException;
 
@@ -103,9 +100,6 @@ public abstract class AbstractConverter {
         java.time.LocalDateTime.class, true, new LocalDateTime2ZonedDateTimeODataAttributeConverter()));
     DEFAULT_ODATA_ATTRIBUTE_CONVERTERS.add(new ConverterMapping(java.sql.Timestamp.class,
         java.time.LocalDateTime.class, true, new LocalDateTime2SqlTimestampODataAttributeConverter()));
-    DEFAULT_ODATA_ATTRIBUTE_CONVERTERS.add(new ConverterMapping(java.sql.Date.class, java.time.Instant.class, false, new TimeInstant2UtilDateODataAttributeConverter()));
-    DEFAULT_ODATA_ATTRIBUTE_CONVERTERS.add(new ConverterMapping(java.sql.Timestamp.class, java.time.Instant.class, false, new TimeInstant2TimestampODataAttributeConverter()));
-    DEFAULT_ODATA_ATTRIBUTE_CONVERTERS.add(new ConverterMapping(java.util.Calendar.class, java.time.Instant.class, false, new TimeInstant2UtilCalenderODataAttributeConverter()));
   }
 
   protected final Logger log = Logger.getLogger(AbstractConverter.class.getName());
@@ -151,9 +145,11 @@ public abstract class AbstractConverter {
     if (annoConversionConfiguration != null) {
       try {
         if (!EdmAttributeConversion.DEFAULT.class.equals(annoConversionConfiguration.converter())) {
-          return (ODataAttributeConverter<Object, Object>) annoConversionConfiguration.converter().newInstance();
+          return (ODataAttributeConverter<Object, Object>) annoConversionConfiguration.converter()
+              .getDeclaredConstructor().newInstance();
         }
-      } catch (InstantiationException | IllegalAccessException e) {
+      } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+          | NoSuchMethodException | SecurityException e) {
         throw new ODataJPAConversionException(e, ODataJPAConversionException.MessageKeys.RUNTIME_PROBLEM, e.getMessage());
       }
     }
@@ -660,7 +656,7 @@ public abstract class AbstractConverter {
 
   final public void transferODataSingleComplexValue2JPAProperty(final JPAStructuredType embeddedJPAMemberType,
       final Object targetJPAObjectMemberValue, final List<Property> listEmbeddedProperties)
-      throws ODataJPAModelException, ODataJPAConversionException {
+          throws ODataJPAModelException, ODataJPAConversionException {
     final Set<String> unprocessedPropertyNames = listEmbeddedProperties.stream().map(p -> p.getName()).collect(
         Collectors.toSet());
     // 1. normal attributes
